examples/should-fail/f43_impred_predicative_leak_sort3.lean
def demo4_bad_predicative_leak_sort3 : Sort 3 :=
  (X : Sort 3) -> (x : X) -> Prop
